<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvInvitation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_view_dialog_invitation"
        app:layout_constraintWidth_default="percent"
        android:textAppearance="@style/text_view_invitation_text_appear"

        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilColl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        app:boxStrokeWidth="0dp"

        app:hintTextAppearance="@style/input_collections_size_hint_text_appear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInvitation"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inCollectionSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor"

            android:maxLines="1"
            android:maxLength="8"
            android:hint="@string/input_dialog_elements_amount_hint"
            app:hintTextAppearance="@style/input_collections_size_text_appear" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bCalculate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40sp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        android:textAppearance="@style/button_calculate_text_appear"
        android:text="@string/button_calculate_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>